--- a/WebApplication4/Views/Home/gene.cshtml
+++ b/WebApplication4/Views/Home/gene.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>DevExtreme Demo</title>
+    <title>Generador Demo</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -32,7 +32,7 @@
     </nav>
     <!-- Contenedor del botón deslizable -->
     <div class="switch-container">
-        <p class="switch-text">Botón Deslizable</p>
+        <p class="switch-text">Bot</p>
         <div id="switch-container">
         </div>
     </div>
@@ -44,7 +44,7 @@
             <div id="empleado"></div>
         </div>
         <div class="textbox-container">
-            <div class="textbox-title">Vehículo</div>
+            <div class="textbox-title">Vehiculo</div>
             <div id="veiculo"></div>
         </div>
         <div class="textbox-container">
@@ -55,7 +55,6 @@
             <div class="textbox-title">Ruta</div>
             <div id="ruta"></div>
         </div>
-        <!-- Nuevas celdas para pesos -->
         <div class="textbox-container">
             <div class="textbox-title">Material</div>
             <input id="material" class="dx-texteditor">
@@ -66,7 +65,7 @@
         </div>
         <div class="textbox-container">
             <div class="textbox-title">Comentarios</div>
-            <input id="comentarios" class="dx-texteditor">
+            <input id="cometarios" class="dx-texteditor">
         </div>
     </div>
 
@@ -74,12 +73,12 @@
     <div class="demo-container">
 
         <p>Datos insertados</p>
-        <button onclick="location.href='@Url.Action("his", "Home")'" class="historicos-btn">
+        <button onclick="location.href='@Url.Action("his", "home" , null)'" class="historicos-btn">
             Históricos
         </button>
 
         <div id="treeListContainer">
-            <!-- Contenido de la tabla o datos generados -->
+            <!-- Contenido de datos generados -->
         </div>
     </div>
 </body>
